--- a/application.json
+++ b/application.json
@@ -11,7 +11,7 @@
   "color": "#F3F1C7",
   "icon": "line-chart",
   "unpublishedAppLayout": {
-    "type": "MOBILE"
+    "type": "FLUID"
   },
   "publishedAppLayout": {
     "type": "MOBILE"
