--- a/application.json
+++ b/application.json
@@ -14,7 +14,7 @@
     "type": "FLUID"
   },
   "publishedAppLayout": {
-    "type": "MOBILE"
+    "type": "FLUID"
   },
   "evaluationVersion": 2,
   "applicationVersion": 2,
